# gtfs-schedule

./: Cargo.toml
gtfs-schedule/: Cargo.toml
gtfs-schedule-macros/: Cargo.toml
gtfs-schedule-macros/src/: lib.rs
gtfs-schedule/src/: dataset.rs  error.rs  lib.rs
gtfs-schedule/src/schemas/: agency.rs  area.rs  attribution.rs  booking_rule.rs  calendar.rs  calendar_date.rs  common.rs  fare_attribute.rs  fare_leg_rule.rs  fare_media.rs  fare_product.rs  fare_rule.rs  fare_transfer_rule.rs  feed_info.rs  frequency.rs  level.rs  location_group.rs  location_group_stop.rs  mod.rs  network.rs  pathway.rs  route.rs  route_network.rs  shape.rs  stop.rs  stop_area.rs  stop_time.rs  timeframe.rs  transfer.rs  translation.rs  trip.rs
gtfs-schedule/tests/: datasets.rs
