[package]
name = "gtfs-schedule"
version = "0.1.0"
edition = "2021"
authors = ["Rémi Kalbe <me@remi.boo>"]

[dependencies]
gtfs-schedule-macros = { path = "../gtfs-schedule-macros" }

chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
phonenumber = "0.3"
url = { version = "2.5.2", features = ["serde"] }
email_address = "0.2.5"
oxilangtag = { version = "0.1.5", features = ["serde"] }
geo = { version = "0.28.0", features = ["use-serde"] }
iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }

once_cell = "1.19.0"
dashmap = "6.0.1"

regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
csv = "1.3.0"
serde_with = "3.9.0"

thiserror = "1.0.62"
serde_repr = "0.1.19"
miette = "7.2.0"
temp-env = "0.3.6"

[dev-dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
